Modification of french internationalization

--- a/scriptnet/locale/fr/LC_MESSAGES/django.po
+++ b/scriptnet/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-06-28 15:16+0300\n"
+"POT-Creation-Date: 2016-06-30 10:47+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -40,11 +40,11 @@ msgid ""
 "above)"
 msgstr "Nom d'affiliation"
 
-#: competitions/forms.py:28
+#: competitions/forms.py:28 competitions/forms.py:32
 msgid "Username"
 msgstr "Nom d'utilisateur"
 
-#: competitions/forms.py:29
+#: competitions/forms.py:29 competitions/forms.py:33
 msgid "Password"
 msgstr "Mot de passe"
 
@@ -54,7 +54,7 @@ msgstr "Un court identifiant pour la methode"
 
 #: competitions/forms.py:51
 msgid "A short description of the method"
-msgstr "Une courte description pour la methode"
+msgstr "Une courte description de la methode"
 
 #: competitions/forms.py:52
 msgid "Show results for this method for everyone"
@@ -64,43 +64,47 @@ msgstr "Afficher les resultats de cette methode pour tout le monde"
 msgid "Result file"
 msgstr "Fichier de resultat"
 
-#: competitions/templates/competitions/competition.html:54
+#: competitions/forms.py:56 competitions/templates/competitions/master.html:85
+msgid "Language"
+msgstr "Langue"
+
+#: competitions/templates/competitions/competition.html:53
 msgid "Competition home"
 msgstr "Accueil Competition"
 
-#: competitions/templates/competitions/competition.html:72
+#: competitions/templates/competitions/competition.html:71
 msgid "Organizers"
 msgstr "Organisateurs"
 
-#: competitions/templates/competitions/competition.html:104
+#: competitions/templates/competitions/competition.html:103
 msgid "Track"
 msgstr "Piste"
 
-#: competitions/templates/competitions/competition.html:110
+#: competitions/templates/competitions/competition.html:109
 msgid "Subtrack"
 msgstr "Sous-piste"
 
-#: competitions/templates/competitions/competition.html:112
+#: competitions/templates/competitions/competition.html:111
 msgid "Download data"
 msgstr "Telechargement des donnees"
 
-#: competitions/templates/competitions/competition.html:114
+#: competitions/templates/competitions/competition.html:113
 msgid "Submit method"
 msgstr "Soumettre la methode"
 
-#: competitions/templates/competitions/competition.html:115
+#: competitions/templates/competitions/competition.html:114
 msgid "View results"
 msgstr "Voir les resultats"
 
-#: competitions/templates/competitions/competition.html:131
+#: competitions/templates/competitions/competition.html:130
 msgid "News"
 msgstr "Nouvelles"
 
-#: competitions/templates/competitions/competition.html:136
+#: competitions/templates/competitions/competition.html:135
 msgid "Important Dates"
 msgstr "Dates Importantes"
 
-#: competitions/templates/competitions/competition.html:152
+#: competitions/templates/competitions/competition.html:151
 msgid "READ - a Horizon 2020 e-infrastructure project"
 msgstr "READ - Un projet de e-infrastucture pour l'horizon 2020"
 
@@ -108,80 +112,175 @@ msgstr "READ - Un projet de e-infrastucture pour l'horizon 2020"
 msgid "ScriptNet Document Understanding Competitions"
 msgstr "ScriptNet Documentation Technique"
 
-#: competitions/templates/competitions/master.html:55
-msgid "Logged in as"
-msgstr ""
-
-#: competitions/templates/competitions/master.html:56
-msgid "[Logout]"
-msgstr ""
-
 #: competitions/templates/competitions/master.html:58
+msgid "Logged in as"
+msgstr "Connecte en tant que"
+
+#: competitions/templates/competitions/master.html:59
+msgid "[Logout]"
+msgstr "Se deconnecter"
+
+#: competitions/templates/competitions/master.html:61
 msgid "Welcome to"
 msgstr "Bienvenue dans"
 
-#: competitions/templates/competitions/master.html:65
+#: competitions/templates/competitions/master.html:68
 msgid "About"
 msgstr "A propos"
 
-#: competitions/templates/competitions/master.html:68
+#: competitions/templates/competitions/master.html:71
 msgid "Competitions"
 msgstr "Competitions"
 
-#: competitions/templates/competitions/master.html:71
-#: competitions/templates/competitions/master.html:182
+#: competitions/templates/competitions/master.html:74
+#: competitions/templates/competitions/master.html:211
+#: competitions/templates/competitions/master.html:218
 msgid "Register"
 msgstr "S'inscrire"
 
-#: competitions/templates/competitions/master.html:75
-#: competitions/templates/competitions/master.html:209
+#: competitions/templates/competitions/master.html:78
+#: competitions/templates/competitions/master.html:238
 msgid "Login"
 msgstr "Connexion"
 
-#: competitions/templates/competitions/master.html:79
+#: competitions/templates/competitions/master.html:82
 msgid "Contact"
 msgstr "Contact"
 
-#: competitions/templates/competitions/master.html:93
+#: competitions/templates/competitions/master.html:122
 msgid "ScriptNet is a platform of competitions running under the READ project"
 msgstr ""
+"ScriptNet est une plateforme de competition en cours d'execution dans le "
+"cadre du projet READ"
 
-#: competitions/templates/competitions/master.html:94
+#: competitions/templates/competitions/master.html:123
 msgid "Find Out More"
 msgstr "En savoir plus"
 
-#: competitions/templates/competitions/master.html:104
+#: competitions/templates/competitions/master.html:133
 msgid "About ScriptNet"
 msgstr "A propos de ScriptNet"
 
-#: competitions/templates/competitions/master.html:139
+#: competitions/templates/competitions/master.html:168
 msgid "Active Document Understanding Competitions"
-msgstr ""
+msgstr "Documents actifs pour comprendre la competition"
 
-#: competitions/templates/competitions/master.html:167
+#: competitions/templates/competitions/master.html:196
 msgid "*No competitions are currently active*"
-msgstr "Pas de competition active pour le moment"
+msgstr "Pas de competition en cours pour le moment"
 
-#: competitions/templates/competitions/master.html:183
+#: competitions/templates/competitions/master.html:212
 msgid "Register to take part in one of the active competitions."
-msgstr ""
+msgstr "Inscrivez-vous pour prendre part a des competitions en cours"
 
-#: competitions/templates/competitions/master.html:202
+#: competitions/templates/competitions/master.html:231
 msgid "Sign in"
-msgstr ""
+msgstr "Se connecter"
 
-#: competitions/templates/competitions/master.html:203
+#: competitions/templates/competitions/master.html:232
 msgid "Login with your credentials if you have already registered."
-msgstr ""
+msgstr "Identifiez-vous avec vos identifiants si vous etes deja inscrit"
 
-#: competitions/templates/competitions/master.html:240
+#: competitions/templates/competitions/master.html:269
 msgid "Institute of Informatics and Telecommunications"
-msgstr "Institut d'informatiaue et de telecommunication"
+msgstr "Institut d'informatique et de telecommunication"
 
-#: competitions/templates/competitions/master.html:248
+#: competitions/templates/competitions/master.html:277
 msgid "Computational Intelligence Laboratory"
-msgstr ""
+msgstr "Laboratoire d'imtelligence informatique"
 
-#: competitions/templates/competitions/master.html:256
+#: competitions/templates/competitions/master.html:285
 msgid "READ project"
 msgstr "Projet READ"
+
+#: scriptnet/settings.py:118
+msgid "Bulgarian"
+msgstr "Bulgare"
+
+#: scriptnet/settings.py:119
+msgid "Croatian"
+msgstr "Croate"
+
+#: scriptnet/settings.py:120
+msgid "Czech"
+msgstr "Tcheque"
+
+#: scriptnet/settings.py:121
+msgid "Danish"
+msgstr "Danois"
+
+#: scriptnet/settings.py:122
+msgid "Dutch"
+msgstr "Neerlandais"
+
+#: scriptnet/settings.py:123
+msgid "English"
+msgstr "Anglais"
+
+#: scriptnet/settings.py:124
+msgid "Estonian"
+msgstr "Estonien"
+
+#: scriptnet/settings.py:125
+msgid "Finnish"
+msgstr "Finlandais"
+
+#: scriptnet/settings.py:126
+msgid "French"
+msgstr "Francais"
+
+#: scriptnet/settings.py:127
+msgid "German"
+msgstr "Allemand"
+
+#: scriptnet/settings.py:128
+msgid "Greek"
+msgstr "Grecque"
+
+#: scriptnet/settings.py:129
+msgid "Hungarian"
+msgstr "Hongrois"
+
+#: scriptnet/settings.py:130
+msgid "Irish"
+msgstr "Irlandais"
+
+#: scriptnet/settings.py:131
+msgid "Italian"
+msgstr "Italien"
+
+#: scriptnet/settings.py:132
+msgid "Latvian"
+msgstr "Laiton"
+
+#: scriptnet/settings.py:133
+msgid "Lithuanian"
+msgstr "Lituanien"
+
+#: scriptnet/settings.py:134
+msgid "Polish"
+msgstr "Polonais"
+
+#: scriptnet/settings.py:135
+msgid "Portuguese"
+msgstr "Portugais"
+
+#: scriptnet/settings.py:136
+msgid "Romanian"
+msgstr "Roumain"
+
+#: scriptnet/settings.py:137
+msgid "Slovak"
+msgstr "Slovaque"
+
+#: scriptnet/settings.py:138
+msgid "Slovenian"
+msgstr "Slovene"
+
+#: scriptnet/settings.py:139
+msgid "Spanish"
+msgstr "Espagnol"
+
+#: scriptnet/settings.py:140
+msgid "Swedish"
+msgstr "Suedois"
