--- a/scriptnet/locale/el/LC_MESSAGES/django.po
+++ b/scriptnet/locale/el/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-07-03 12:43+0300\n"
+"POT-Creation-Date: 2016-07-03 15:06+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -107,13 +107,21 @@ msgstr "Ένα σφάλμα προκλήθηκε προτού ξεκινήσει
 
 #: competitions/models.py:203
 msgid "An error has occured during processing of the submitted result"
-msgstr "Ένα σφάλμα προκλήθηκε κατά την διάρκεια της επεξεργασίας του υποβεβλημένου αποτελέσματος"
+msgstr ""
+"Ένα σφάλμα προκλήθηκε κατά την διάρκεια της επεξεργασίας του υποβεβλημένου "
+"αποτελέσματος"
 
 #: competitions/models.py:204
+msgid "This benchmark cannot be computed by the specified evaluator function"
+msgstr "Αυτή η μετρική δεν μπορεί να υπολογιστεί με την δοσμένη συνάρτηση αποτίμησης"
+
+#: competitions/models.py:205
 msgid ""
 "The submitted result has been succesfully processed and a numerical result "
 "has been saved"
-msgstr "Το υποβεβλημένο αποτέλεσμα επεξεργάστηκε με επιτυχία και ένα αριθμητικό αποτέλεσμα έχει αποθηκευτεί"
+msgstr ""
+"Το υποβεβλημένο αποτέλεσμα επεξεργάστηκε με επιτυχία και ένα αριθμητικό "
+"αποτέλεσμα έχει αποθηκευτεί"
 
 #: competitions/templates/competitions/competition.html:50
 #: competitions/templates/competitions/master.html:58
